refactor documentation; add JavaDoc comments to various classes and methods for improved clarity